<resources>
    
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="app_name">tric</string>
    <string name="preferences">Settings</string>
    <string name="pref_tric_title">Application Wide Settings</string>
    <string name="pref_stats_title">tric Settings</string>
    <string name="phonestats_settings">Phone trics</string>
    <string name="socialstats_settings">Social trics</string>
    <string name="trafficstats_settings">Traffic trics</string>
    <string name="appstats_settings">App trics</string>
    <string name="pref_share_title">Share trics</string>
    <string name="pref_share_summary">Choose to periodically share this tric with everyone</string>
    <string name="pref_collect_title">Collect this tric</string>
    <string name="pref_collect_summary">Enable this tric for collecting</string>
    <string name="pref_collectinterval_title">tric Collection Interval</string>
    <string name="pref_collectinterval_summary">Set the collection interval for this tric</string>
    
    <string name="phone">Phone</string>
    <string name="social">Social</string>
    <string name="app">Applications</string>
    <string name="app_individual">Individual Applications</string>
    <string name="traffic">Traffic</string>
    
    <string name="facebook_auth">Connect your Facebook Account</string>
    
    <string name="refresh">Refresh</string>
    <string name="reset">Reset</string>
    
    <string name="clear_stats_message">Are you sure you want to clear this tric?</string>
    <string name="dialog_warning">Warning!</string>
</resources>
