<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/pref_tric_title"
        android:key="pref_key_tric_settings">
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_stats_title"
        android:key="pref_key_stats_settings">
        <PreferenceScreen
            android:key="button_phonestats_category_key"
            android:title="@string/phonestats_settings"
            android:persistent="false">
        </PreferenceScreen>
        <PreferenceScreen
            android:key="button_socialstats_category_key"
            android:title="@string/socialstats_settings"
            android:persistent="false">
        </PreferenceScreen>
        <PreferenceScreen
            android:key="button_appstats_category_key"
            android:title="@string/appstats_settings"
            android:persistent="false">
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>